eb-3067: added GLOBAL.css to forgot password pages. added text-align right to fix 'Sign In' IE7 layout.

--- a/src/WebChannel/main/webapp/xpedx/css/global/GLOBAL.css
+++ b/src/WebChannel/main/webapp/xpedx/css/global/GLOBAL.css
@@ -1878,6 +1878,7 @@ inStoreIcon {
     max-height: 12px;
     overflow: visible;
     padding: 0 5px;
+    text-align: right;
 }
 .commonHeader-subnav li a {
     font-family: Arial,Helvetica,sans-serif;
